--- a/srcs/game/package.json
+++ b/srcs/game/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "alea": "^1.0.1",
+    "better-sqlite3": "^12.4.1",
     "fastify": "^5.6.2",
     "@fastify/websocket": "^11.0.0",
     "simplex-noise": "^4.0.3",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/ws": "^8.5.12",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
