--- a/srcs/dev-docker-compose.yml
+++ b/srcs/dev-docker-compose.yml
@@ -67,6 +67,7 @@ services:
     env_file:
       - path: ./.env
       - path: ./.env.auth
+      - path: ./.env.oauth
     volumes:
       - data:/data
     networks:
@@ -192,6 +193,10 @@ services:
     build:
       context: ./nginx
       dockerfile: Dockerfile.dev
+      # Variables build-time (optionnel, .env.nginx.build est prioritaire)
+      args:
+        VITE_GOOGLE_CLIENT_ID: '${VITE_GOOGLE_CLIENT_ID:-}'
+        VITE_SCHOOL42_CLIENT_ID: '${VITE_SCHOOL42_CLIENT_ID:-}'
     container_name: '${PROXY_SERVICE_NAME}-dev'
     ports:
       - '8080:80'
