fix: delete colima-dev rules. Add pong-ai env var in .env

--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -17,6 +17,10 @@ LOG_ENABLED=true
 # NGINX PROXY
 PROXY_SERVICE_NAME=nginx-proxy
 
+# PONG AI
+PONG_AI_SERVICE_NAME=pongai-service
+PONG_AI_SERVICE_PORT=3006
+
 # API GATEWAY
 API_GATEWAY_PORT=3000
 API_GATEWAY_NAME=api-gateway
