--- a/srcs/pong-ai/Dockerfile
+++ b/srcs/pong-ai/Dockerfile
@@ -1,6 +1,8 @@
-FROM python:3.10-slim
+# ─── Stage 1: builder ────────────────────────────────────────────────────────
 
-RUN apt-get update && apt-get install -y \
+FROM python:3.10-slim AS builder
+
+RUN apt-get update -y wget && apt-get install -y \
     gcc \
     g++ \
     wget \
@@ -15,7 +17,15 @@ RUN pip install --no-cache-dir --upgrade pip && \
     pip install --force-reinstall --upgrade "numpy<2" && \
     pip install --force-reinstall torch stable-baselines3
 
-COPY pong_env.py .
+# ─── Stage 2: runtime ────────────────────────────────────────────────────────
+
+FROM python:3.10-slim AS runtime
+
+WORKDIR /app
+
+COPY --from=builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
 COPY pong_server.py .
 COPY ai_player.py .
 
@@ -24,6 +34,8 @@ RUN mkdir -p /app/models/best_model
 EXPOSE 3006
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:3006/health || exit 1
+    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:3006/health')" || exit 1
+   
+#CMD wget --no-verbose --tries=1 --spider http://localhost:3006/health || exit 1
 
 CMD ["uvicorn", "pong_server:app", "--host", "0.0.0.0", "--port", "3006", "--log-level", "info"]
