feat: Refonte du système de routing et d'authentification frontend
- Added ARG and ENV for Vite Google and School42 client IDs in both Dockerfiles.
- Updated Nginx configuration to include security headers and improved asset caching.
- Refactored React Router setup in App component to use PrivateRoute and PublicRoute for better authentication handling.
- Implemented global Axios error interceptor to handle unauthorized responses.
- Removed unused DevLogin component and related code.
- Created new HomePage and MyProfilePage components for better user experience.
- Added NotFoundPage for handling undefined routes.
- Introduced PrivateRoute and PublicRoute components for route protection based on authentication status.

srcs/auth/src/controllers/auth.controller.ts
srcs/nginx/Dockerfile
srcs/nginx/Dockerfile.dev
srcs/nginx/conf.d/default.conf
srcs/nginx/src/App.tsx
srcs/nginx/src/api/api-client.ts
srcs/nginx/src/api/auth-api.ts
srcs/nginx/src/components/atoms/DevLogin.tsx
srcs/nginx/src/components/molecules/NavBar.tsx
srcs/nginx/src/components/molecules/UserRow.tsx
srcs/nginx/src/components/organisms/LoginForm.tsx
srcs/nginx/src/components/organisms/RegisterForm.tsx
srcs/nginx/src/hooks/AxiosInterceptor.tsx
srcs/nginx/src/main.tsx
srcs/nginx/src/pages/AnimationPage.tsx
srcs/nginx/src/pages/HomePage.tsx
srcs/nginx/src/pages/LoginRegisterPage.tsx
srcs/nginx/src/pages/MyProfilePage.tsx
srcs/nginx/src/pages/NotFoundPage.tsx
srcs/nginx/src/pages/ProfilePage.tsx
srcs/nginx/src/pages/WelcomePage.tsx
srcs/nginx/src/providers/AuthProvider.tsx
srcs/nginx/src/router/PrivateRoute.tsx
srcs/nginx/src/router/PublicRoute.tsx

--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -3,6 +3,14 @@
 # ==========================
 FROM node:20-alpine AS builder
 
+# Arguments pour les variables d'environnement Vite à build time
+ARG VITE_GOOGLE_CLIENT_ID
+ARG VITE_SCHOOL42_CLIENT_ID
+
+# Exposer les arguments comme variables d'environnement pour Vite
+ENV VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
+ENV VITE_SCHOOL42_CLIENT_ID=${VITE_SCHOOL42_CLIENT_ID}
+
 WORKDIR /app
 
 # Copy ROOT workspace manifests
