--- a/srcs/nginx/Dockerfile.dev
+++ b/srcs/nginx/Dockerfile.dev
@@ -6,6 +6,15 @@
 # ===========================
 FROM nginx:alpine
 
+# Arguments pour les variables d'environnement Vite à build time
+ARG VITE_GOOGLE_CLIENT_ID
+ARG VITE_SCHOOL42_CLIENT_ID
+
+# Exposer les arguments comme variables d'environnement pour Vite
+ENV VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
+ENV VITE_SCHOOL42_CLIENT_ID=${VITE_SCHOOL42_CLIENT_ID}
+
+
 # Install Node.js for esbuild hot reload
 RUN apk add --no-cache nodejs npm openssl
 
@@ -18,6 +27,7 @@ RUN npm install -g esbuild
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY conf.d/default.conf /etc/nginx/conf.d/default.conf
 COPY conf.d/proxy_headers.conf /etc/nginx/conf.d/proxy_headers.conf
+COPY conf.d/proxy_nginx_certs.conf /etc/nginx/conf.d/proxy_nginx_certs.conf
 
 # Copy entrypoint script
 COPY dev-start.sh /dev-start.sh
