--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -45,6 +45,11 @@ server {
     root /usr/share/nginx/src/html;
     index index.html;
 
+    # Security headers (appliqués à toutes les réponses)
+    add_header X-Frame-Options DENY always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header Referrer-Policy strict-origin-when-cross-origin always;
+
     # Configuration des headers commune aux routes
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -163,12 +168,17 @@ server {
       autoindex off;
     }
 
-    location /src/assets/ {
-        alias /usr/share/nginx/html/assets/;
+    # Assets buildés par Vite (hash dans le nom → cache longue durée)
+    location /assets/ {
+        root /usr/share/nginx/src/html;
+        expires 1y;
+        add_header Cache-Control "public, immutable" always;
         try_files $uri =404;
     }
 
+    # SPA fallback — index.html ne doit pas être mis en cache (change à chaque deploy)
     location / {
+        add_header Cache-Control "no-cache" always;
         try_files $uri $uri/ /index.html;
     }
 
