--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,5 @@ docs/welcomPage.jpg
 
 # Snyk Security Extension - AI Rules (auto-generated)
 .github/instructions/snyk_rules.instructions.md
+
+package-lock.json
