fix(docker): use CMD-SHELL for pong-ai healthcheck so env var expands

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -255,7 +255,7 @@ services:
     restart: unless-stopped
     healthcheck:
       <<: *healthcheck-template
-      test: ['CMD', 'curl', '-f', 'http://localhost:${PONG_AI_SERVICE_PORT}/health']
+      test: ['CMD-SHELL', 'wget --no-verbose --tries=1 --spider http://localhost:3006/health || exit 1']
 
 networks:
   app-network:
